# metascraper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: metascraper.rs
src/: lib.rs  test.html
tests/: basic.rs  test.html
