[package]
name = "metascraper"
version = "0.1.0"
description = "MetaScraper is a extracts metadata information of a website."
authors = ["MehmetCan ŞAHİN <sahinmcan@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/metascraper"
repository = "https://github.com/mehmetcansahin/metascraper"
keywords = ["meta", "metatags", "metascraper"]
categories = ["web-programming"]
edition = "2021"

[dependencies]
tl = { version = "0.7.7" }
