[package]
name = "metascraper"
version = "0.2.2"
description = "MetaScraper is a extracts metadata information of a website."
authors = ["Mehmetcan ŞAHİN <sahinmcan@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/metascraper"
repository = "https://github.com/mehmetcansahin/metascraper"
keywords = ["meta", "metatags", "metascraper"]
categories = ["web-programming"]
edition = "2021"

[dependencies]
tl = { version = "0.7.7" }

[dev-dependencies]
criterion = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

[[bench]]
name = "metascraper"
harness = false
